--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "cross-env NODE_ENV=production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "cross-env NODE_ENV=development nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "2.1.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "11.1.1",
     "@node-rs/argon2": "2.0.2",
     "@prisma/client": "6.5.0",
     "class-transformer": "0.5.1",
@@ -37,6 +38,7 @@
     "prisma": "6.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "5.0.1",
     "winston": "3.17.0",
     "winston-daily-rotate-file": "5.0.0"
   },
@@ -53,6 +55,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "cross-env": "7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
